.Net 8 migration; version 8.0.0.0.

--- a/SingleNodeUserControl_CheckServerDemo/SingleNodeUserControl_CheckServerDemo.csproj
+++ b/SingleNodeUserControl_CheckServerDemo/SingleNodeUserControl_CheckServerDemo.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <Title>$(AssemblyName) - Demoprogramm</Title>
@@ -10,13 +10,13 @@
     <Authors>Erik Nagel</Authors>
     <Company>NetEti</Company>
     <Copyright>Copyright © $(Authors) 2015-2023</Copyright>
-    <AssemblyVersion>7.0.1.2</AssemblyVersion>
+    <AssemblyVersion>8.0.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <PropertyGroup>
     <AssemblyRoot>$(ProjectDir)../../../ReadyBin/Assemblies</AssemblyRoot>
     <UserAssemblyRoot>$(ProjectDir)../../../ReadyBin/UserAssemblies</UserAssemblyRoot>
-    <FileVersion>7.0.1.2</FileVersion>
+    <FileVersion>8.0.0.0</FileVersion>
   </PropertyGroup>
   <Import Project="$(ProjectDir)../../AddOn/proj/*" Condition="exists('$(ProjectDir)../../AddOn/proj')" />
 
