--- a/SingleNodeUserControl_CheckServer/SingleNodeUserControl_CheckServer.csproj
+++ b/SingleNodeUserControl_CheckServer/SingleNodeUserControl_CheckServer.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
@@ -11,8 +11,8 @@
     <Authors>Erik Nagel</Authors>
     <Company>NetEti</Company>
     <Copyright>Copyright © $(Authors) 2015-2023</Copyright>
-    <AssemblyVersion>7.0.1.2</AssemblyVersion>
-    <FileVersion>7.0.1.2</FileVersion>
+    <AssemblyVersion>8.0.0.0</AssemblyVersion>
+    <FileVersion>8.0.0.0</FileVersion>
     <PackageTags>NetEti Vishnu Plugin Control View DateToMoonAge</PackageTags>
   </PropertyGroup>
 
