--- a/SingleNodeUserControl_CheckServer/SingleNodeUserControl_CheckServer.csproj
+++ b/SingleNodeUserControl_CheckServer/SingleNodeUserControl_CheckServer.csproj
@@ -10,7 +10,7 @@
     <Description>$(AssemblyName) - Vishnu-UserControl für CheckServer</Description>
     <Authors>Erik Nagel</Authors>
     <Company>NetEti</Company>
-    <Copyright>Copyright © $(Authors) 2015-2023</Copyright>
+    <Copyright>Copyright © $(Authors) 2015-$([System.DateTime]::Now.Year)</Copyright>
     <AssemblyVersion>8.0.0.0</AssemblyVersion>
     <FileVersion>8.0.0.0</FileVersion>
     <PackageTags>NetEti Vishnu Plugin Control View DateToMoonAge</PackageTags>
